2006-04-01  Eric Blake  <ebb9@byu.net>

	* lib/m4sugar/m4sh.m4 (_AS_PATH_WALK): Optimize non-existant
	directories, unless optional third argument supplied.
	(AS_UNAME): Don't optimize PATH walk.

2006-04-01  Eric Blake  <ebb9@byu.net>
	and Stepan Kasal  <kasal@ucw.cz>

	* lib/m4sugar/m4sh.m4: Sort sections as implied by the comments,
	and fix some typos.

2006-04-01  Noah Misch  <noah@cs.caltech.edu>

	* lib/autoconf/general.m4 (_AC_INIT_VERSION): Emit script name and
	Autoconf version number despite a zero- or one-argument AC_INIT.

	* bin/autoreconf.in (parse_args): Multiple -v send --verbose to
	subordinate tools.
	* lib/Autom4te/General.pm (getopt): Make -v and -d incremental.
	* doc/autoconf.texi (autoreconf Invocation): Document it.

	* doc/autoconf.texi: Use `Cygwin', `MinGW', and `license' consistently.
	Append LocalWords so ispell-buffer passes cleanly.  Spelling fixes.

2006-04-01  Eric Blake  <ebb9@byu.net>

	* lib/m4sugar/m4sh.m4 (AS_MKDIR_P): Allow use in shell lists.
	* lib/autotest/general.m4: Be tolerant of existing directory when
	  rm failed to remove it.

2006-04-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* bin/autoupdate.in: Redefine m4_location so that warnings print
	the correct lines of the input file by subtracting..
	(_au__first_line): ..this new definition.

	* lib/autoconf/general.m4 (AC_COMPILE_CHECK): Prefer
	AC_MSG_CHECKING over obsolete AC_CHECKING in autoupdated code.
	Remove stray newline in output.
	(AC_FOREACH): AU_DEFUN this as literal for autoupdate, and also
	AC_DEFUN this for autoconf, including the obsoletion diagnose.
	Fixes autoupdating of code where the replacement output contains
	m4sugar macros.
	* lib/autoconf/lang.m4 (AC_LANG_SAVE): Likewise.
	* tests/mktests.sh (ac_exclude_list): Add AC_FOREACH.
	 (au_exclude_list): Add AC_LANG_SAVE.
	* tests/tools.at: Several new tests for all of this.
	* doc/autoconf.texi (Obsoleting Macros): Give a hint about the
	hairy details.